--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,9 @@
           </a>
           <ul class="link-menu">
             <li><a class="link-item" href="index.html">Studio</a></li>
-            <li><a class="link-item" href="portfolio.html">Portfolio</a></li>
+            <li>
+              <a class="link-item active" href="portfolio.html">Portfolio</a>
+            </li>
             <li><a class="link-item" href="">Contacts</a></li>
           </ul>
         </nav>
@@ -70,12 +72,18 @@
           <ul class="list-portfolio">
             <li class="list-pic">
               <a class="list-pic-link" href="">
-                <img
-                  src="./images/portfolio1.jpg"
-                  alt="Banking App"
-                  width="360"
-                />
-
+                <div class="box-portfolio">
+                  <img
+                    src="./images/portfolio1.jpg"
+                    alt="Banking App"
+                    width="360"
+                  />
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="picture">
                   <h2 class="portfolio-item">Banking App Interface Concept</h2>
                   <p class="portfolio-menu">App</p>
@@ -84,12 +92,18 @@
             </li>
             <li class="list-pic">
               <a class="list-pic-link" href="">
-                <img
-                  src="./images/portfolio2.jpg"
-                  alt="phone in hand"
-                  width="360"
-                />
-
+                <div class="box-portfolio">
+                  <img
+                    src="./images/portfolio2.jpg"
+                    alt="phone in hand"
+                    width="360"
+                  />
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="picture">
                   <h2 class="portfolio-item">Cashless Payment</h2>
                   <p class="portfolio-menu">Marketing</p>
@@ -98,8 +112,14 @@
             </li>
             <li class="list-pic">
               <a class="list-pic-link" href="">
-                <img src="./images/portfolio3.jpg" alt="laptop" width="360" />
-
+                <div class="box-portfolio">
+                  <img src="./images/portfolio3.jpg" alt="laptop" width="360" />
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="picture">
                   <h2 class="portfolio-item">Meditaion App</h2>
                   <p class="portfolio-menu">App</p>
@@ -108,8 +128,14 @@
             </li>
             <li class="list-pic">
               <a class="list-pic-link" href="">
-                <img src="./images/portfolio4.jpg" alt="car" width="360" />
-
+                <div class="box-portfolio">
+                  <img src="./images/portfolio4.jpg" alt="car" width="360" />
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="picture">
                   <h2 class="portfolio-item">Taxi Service</h2>
                   <p class="portfolio-menu">Marketing</p>
@@ -118,12 +144,18 @@
             </li>
             <li class="list-pic">
               <a class="list-pic-link" href="">
-                <img
-                  src="./images/portfolio5.jpg"
-                  alt="telephone"
-                  width="360"
-                />
-
+                <div class="box-portfolio">
+                  <img
+                    src="./images/portfolio5.jpg"
+                    alt="telephone"
+                    width="360"
+                  />
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="picture">
                   <h2 class="portfolio-item">Screen Illustrations</h2>
                   <p class="portfolio-menu">Design</p>
@@ -132,12 +164,18 @@
             </li>
             <li class="list-pic">
               <a class="list-pic-link" href="">
-                <img
-                  src="./images/portfolio6.jpg"
-                  alt="girl with a phone in her hands"
-                  width="360"
-                />
-
+                <div class="box-portfolio">
+                  <img
+                    src="./images/portfolio6.jpg"
+                    alt="girl with a phone in her hands"
+                    width="360"
+                  />
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="picture">
                   <h2 class="portfolio-item">Online Courses</h2>
                   <p class="portfolio-menu">Marketing</p>
@@ -146,12 +184,18 @@
             </li>
             <li class="list-pic">
               <a class="list-pic-link" href="">
-                <img
-                  src="./images/portfolio7.jpg"
-                  alt="Stories Concept"
-                  width="360"
-                />
-
+                <div class="box-portfolio">
+                  <img
+                    src="./images/portfolio7.jpg"
+                    alt="Stories Concept"
+                    width="360"
+                  />
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="picture">
                   <h2 class="portfolio-item">Instagram Stories Concept</h2>
                   <p class="portfolio-menu">Design</p>
@@ -160,12 +204,18 @@
             </li>
             <li class="list-pic">
               <a class="list-pic-link" href="">
-                <img
-                  src="./images/portfolio8.jpg"
-                  alt="vegetables in a bag"
-                  width="360"
-                />
-
+                <div class="box-portfolio">
+                  <img
+                    src="./images/portfolio8.jpg"
+                    alt="vegetables in a bag"
+                    width="360"
+                  />
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="picture">
                   <h2 class="portfolio-item">Organic Food</h2>
                   <p class="portfolio-menu">Web Site</p>
@@ -174,8 +224,14 @@
             </li>
             <li class="list-pic">
               <a class="list-pic-link" href="">
-                <img src="./images/portfolio9.jpg" alt="Coffee" width="360" />
-
+                <div class="box-portfolio">
+                  <img src="./images/portfolio9.jpg" alt="Coffee" width="360" />
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="picture">
                   <h2 class="portfolio-item">Fresh Coffee</h2>
                   <p class="portfolio-menu">Web Site</p>
