--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
             ><span class="logo-right">Studio</span>
           </a>
           <ul class="link-menu">
-            <li><a class="link-item" href="index.html">Studio</a></li>
-            <li><a class="link-item" href="portfolio.html">Portfolio</a></li>
+            <li><a class="link-item active" href="index.html">Studio</a></li>
+            <li>
+              <a class="link-item" href="portfolio.html">Portfolio</a>
+            </li>
             <li><a class="link-item" href="">Contacts</a></li>
           </ul>
         </nav>
@@ -57,7 +59,9 @@
       <section class="hero">
         <div class="container">
           <h1 class="title">Effective Solutions for Your Business</h1>
-          <button class="btn" type="button">Order Service</button>
+          <button class="btn" type="button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
       <section class="desc">
@@ -425,5 +429,13 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <svg class="modal-close" width="24" height="24" data-modal-close>
+          <use href="./images/symbol-defs.svg#icon-Vector"></use>
+        </svg>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
